# LLM-quest

./: .gitignore  LICENSE  README.md  config.py  gpt_download.py  pyproject.toml
llm_from_scratch/: dataset.py  rope.py
llm_from_scratch/GPT/: README.md  generate.py  gpt_model.py  gpt_training.py  gpt_transformer_block.py
llm_from_scratch/GPT_to_Llama32/: llama_attention.py  llama_model.py  llama_transformer_block.py
llm_from_scratch/Llama32_to_DeepSeekV3/: README.md  custom_collate_mtp.py  deepseek_attention.py  deepseek_engine.py  deepseek_model.py  deepseek_training.py  deepseek_transformer_block.py
llm_from_scratch/Llama32_to_Gemma3/: README.md  gemma3_attention.py  gemma3_model.py  gemma3_transformer_block.py  logits_softcapping.py
llm_from_scratch/MoE/: README.md  classic_moe.py  deepseek_moe.py
llm_from_scratch/alignment/DPO/: README.md  dpo.py  dpo_training.py
llm_from_scratch/experimental/: Readme.md
llm_from_scratch/finetuning/classifier_tuning/: cl_engine.py  cl_generate.py  cl_training.py
llm_quest/: dataset.py  engine.py  generate.py  lora.py  ntloss.py  qk_clip.py  rope.py  utils.py
llm_quest/common/: buffers.py  dynamic_tanh.py  lora.py  qk_clip.py  reinforced_attention_learning.py  rope.py
llm_quest/experimental/: Readme.md
llm_quest/gpt/: README.md  generate.py  gpt_attention.py  gpt_download_weights.py  gpt_model.py  gpt_training.py  gpt_transformer_block.py
llm_quest/gpt_to_llama3/: README.md  llama_attention.py  llama_model.py  llama_transformer_block.py
llm_quest/linear_attention_to_gated_deltanet/: README.md
llm_quest/llama3_to_deepseekv3/: README.md  custom_collate_mtp.py  deepseek_attention.py  deepseek_engine.py  deepseek_model.py  deepseek_training.py  deepseek_transformer_block.py
llm_quest/llama3_to_gemma3/: README.md  gemma3_attention.py  gemma3_model.py  gemma3_transformer_block.py  logits_softcapping.py
llm_quest/moe/: README.md  classic_moe.py  deepseek_moe.py  nvidia_latent_moe.py  qwen3_moe.py
llm_quest/multimodal/: README.md  multimodal_engine.py  multimodal_generation.py  multimodal_training.py  vlm_engine.py  vlm_generation.py  vlm_training.py
llm_quest/qwen3/: README.md  qwen3_attention.py  qwen3_generate.py  qwen3_model.py  qwen3_transformer_block.py  qwen3_weight_loading.py
llm_quest/reinforcement_pretraining/: README.md  rpt_engine.py  rpt_training.py  rpt_training_qwen3.py
llm_quest/speculative_decoding/: README.md  spec_decoding_engine.py  spec_decoding_generate.py
llm_quest/vision_transformer/: vit_attention.py  vit_model.py  vit_training.py  vit_transformer_block.py
llm_quest/vit/: README.md  vit_engine.py  vit_model.py  vit_training.py  vit_transformer_block.py
llm_quest/xiaomi/: README.md  mimo_v2_flash_attention.py  mimo_v2_flash_engine.py  mimo_v2_flash_model.py  mimo_v2_flash_training.py  mimo_v2_flash_transformer_block.py
(+75 files in other folders)
